syntax = "proto3";

package fspb;

option go_package = "cloudborad/ringio/fspb";

import "ringio/fspb/chunkinfo.proto";
import "ringio/fspb/error.proto";


/*
putReplica func(nodeID string, reader io.Reader, info *ReplicaObjectInfo) error

getReplica func(nodeID string, key []byte) (io.ReadCloser, *ReplicaObjectInfo, error)

delReplica func(nodeID string, info *ReplicaObjectInfo) error

checkReplica func(nodeID string, info *ReplicaObjectInfo) error

syncReplicaInfo func(info *ReplicaObjectInfo) error
*/

message ReplicaChunkInfo {

    bytes key = 1;

    HashChunkInfo chunk_info = 2;

    int64 replica_count = 3;

    bytes checksum = 4;

    repeated string node_ids = 5;

}

// Stream
message PutReplicaRequest {
    bytes data = 1;
    ReplicaChunkInfo info = 2;
}

// Stream
message GetReplicaResponse {
    bytes data = 1;
    ReplicaChunkInfo info = 2;
    Error error = 3;
}

message CheckReplicaRequest {
    ReplicaChunkInfo info = 1;
}


message UpdateReplicaInfoRequest {
    ReplicaChunkInfo info = 1;
}

